--- a/Layouts/Tabuleiro.uistate.xml
+++ b/Layouts/Tabuleiro.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>640</position-x>
-        <position-y>370.359</position-y>
+        <position-y>388.66</position-y>
         <position-z>146.41</position-z>
         <lookat-x>640</lookat-x>
-        <lookat-y>370.359</lookat-y>
+        <lookat-y>388.66</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -23,7 +23,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Interface" />
+    <active-layer name="Fundo" />
     <layers>
         <layer locked="0" name="Fundo" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Interface" parallax-in-editor="0" visible="1" />
